--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/nv.d3.css">
   </head>
   <body>
     <!-- Title -->
@@ -24,5 +25,8 @@
 
     <!-- Script -->
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/d3/d3.js"></script>
+    <script type="text/javascript" src="js/d3/d3.min.js"></script>
+    <script type="text/javascript" src="js/nd.d3.js"></script>
   </body>
 </html>
