Add sly framework

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <!-- Title -->
     <h1 class="title has-text-centered">Indonesia</h1>
     <h2 class="subtitle has-text-centered">Population Map</h2>
+    <div id="idnMap"></div>
+    <div class="frame">
+        <ul class="slidee">
+            <li>sad</li>
+            <li>dsa</li>
+            <li>asd</li>
+            <li>sad</li>
+            <li>dsa</li>
+            <li>asd</li>
+        </ul>
+    </div>
+
+    <div class="scrollbar">
+        <div class="handle"></div>
+    </div>
+
+
 
     <!-- Data Source -->
     <p class="subtitle has-text-centered">Source: <a href="http://kemendagri.go.id/" target="_blank">Kemendagri</a>, 2015 Population Estimate.</p>
@@ -21,6 +38,13 @@
     <!-- D3.js Source -->
     <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
+
+    <script
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+      crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="https:/cdn.rawgit.com/darsain/sly/master/dist/sly.js"></script>
 
     <!-- Script -->
     <script type="text/javascript" src="js/script.js"></script>
