add data of 'peminat' for each 'prodi'

--- a/side-facts.html
+++ b/side-facts.html
@@ -74,8 +74,8 @@
 
   <!-- Script -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/d3/d3.min.js"></script>
-  <script type="text/javascript" src="js/d3v3.5.17/d3.min.js"></script>
+  <!-- <script type="text/javascript" src="js/d3/d3.min.js"></script> -->
+  <script type="text/javascript" src="js/d3v3.5.17/d3.v3.min.js"></script>
   <script type="text/javascript" src="js/nv.d3.js"></script>
   <script type="text/javascript" src="js/side-facts.js"></script>
 </body>
