Add all univ button

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                                 </a>
                             </div>
                             <div class="control">
-                                <a class="button is-primary is-outlined">
-                                    Semua Univesitas
+                                <a class="button is-primary" id="allUniv">
+                                    Semua Universitas
                                 </a>
                             </div>
                         </div>
@@ -54,6 +54,7 @@
         <p class="subtitle has-text-centered">Source: <a href="http://kemendagri.go.id/" target="_blank">Kemendagri</a>, 2015 Population Estimate.</p>
         <!-- D3.js Source -->
         <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.js"></script>
         <script src="https://d3js.org/topojson.v3.min.js"></script>
         <script
         src="https://code.jquery.com/jquery-1.12.4.min.js"
