--- a/picto/index.html
+++ b/picto/index.html
@@ -6,15 +6,15 @@
   <div id="picto">
     <div class="univ"></div>
     <div class="prodi"></div>
+    <div id="success-rate">
+      Acceptance rate: 20%
+    </div>
     <div>
       <div id="expected">
         <label>Diterima</label>
         <div id="expected-content"></div>
       </div>
-<!--       <div id="success-rate">
-        20%
-      </div>
- -->      <div id="unexpected">
+      <div id="unexpected">
         <label>&nbsp;&nbsp;Mendaftar</label>
         <div id="unexpected-content"></div>
       </div>
@@ -28,7 +28,7 @@
   </div>
 
   <div id="templates" style="display: none;">
-    <div class="picto">
+    <div class="picto" style="display: none;">
       <img src="clip.png" height="100%">
     </div>
   </div>  
