Add fuzzy search frame

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="tile is-child">
                         <div class="field has-addons">
                             <div class="control is-expanded">
-                                <input class="input" type="text" placeholder="Cari Universitas">
+                                <input id="searchUniv" class="input" type="text" placeholder="Cari Universitas">
                             </div>
                             <div class="control">
                                 <a class="button is-info">
@@ -61,6 +61,7 @@
         integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
         crossorigin="anonymous"></script>
         <script type="text/javascript" src="https:/cdn.rawgit.com/darsain/sly/master/dist/sly.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.js"></script>
         <!-- Script -->
         <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript" src="js/d3/d3.js"></script>
