--- a/picto/index.html
+++ b/picto/index.html
@@ -6,10 +6,7 @@
   <div id="picto">
     <div class="univ"></div>
     <div class="prodi"></div>
-    <div id="success-rate">
-      Acceptance rate: 20%
-    </div>
-    <div>
+    <div class="picto-content">
       <div id="expected">
         <label>Diterima</label>
         <div id="expected-content"></div>
@@ -18,6 +15,8 @@
         <label>&nbsp;&nbsp;Mendaftar</label>
         <div id="unexpected-content"></div>
       </div>
+    </div>
+    <div class="success-rate">
     </div>
 <!--     <div style="display: table; clear: both; margin-top: 10px;">
       <div style="display: table-row;">
