--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
                                 <input id="searchUniv" class="input" type="text" placeholder="Cari Universitas">
                             </div>
                             <div class="control">
-                                <a class="button is-info">
-                                    Cari
-                                </a>
-                            </div>
-                            <div class="control">
                                 <a class="button is-primary" id="allUniv">
                                     Semua Universitas
                                 </a>
                             </div>
+                            <p class="control">
+                                <span class="select">
+                                    <select id="prodSelect">
+                                        <option>Semua Prodi</option>
+                                    </select>
+                                </span>
+                            </p>
                         </div>
                     </div>
-                    <div class="tile is-child">
-                        <div class="frame box">
+                    <div class="tile is-child box" style="padding: 0;">
+                        <div class="frame">
                             <ul class="slidee">
                             </ul>
                         </div>
