--- a/side-facts.html
+++ b/side-facts.html
@@ -31,8 +31,93 @@
         <option value="3">Keketatan</option>
       </select>
       dari
-      <select id="top-prodi-univ">
-        <option value="0">Semua Universitas</option>
+      <select id="top-prodi-ptn">
+        <option value="0">Semua PTN</option>
+        <option value="10">ISBI ACEH</option>
+        <option value="11">UNIVERSITAS SYIAH KUALA</option>
+        <option value="12">UNIVERSITAS MALIKUSSALEH</option>
+        <option value="13">UNIVERSITAS TEUKU UMAR</option>
+        <option value="14">UNIVERSITAS NEGERI MEDAN</option>
+        <option value="15">UNIVERSITAS SUMATERA UTARA</option>
+        <option value="16">UNIVERSITAS SAMUDRA</option>
+        <option value="17">UNIVERSITAS NEGERI PADANG</option>
+        <option value="18">UNIVERSITAS ANDALAS</option>
+        <option value="19">UNIVERSITAS RIAU</option>
+        <option value="20">UNIVERSITAS ISLAM NEGERI SULTAN SYARIF KASIM</option>
+        <option value="21">UNIVERSITAS JAMBI</option>
+        <option value="22">UNIVERSITAS MARITIM RAJA ALI HAJI</option>
+        <option value="23">UNIVERSITAS SRIWIJAYA</option>
+        <option value="24">UNIVERSITAS BANGKA BELITUNG</option>
+        <option value="25">UNIVERSITAS BENGKULU</option>
+        <option value="26">INSTITUT TEKNOLOGI SUMATERA</option>
+        <option value="27">UNIVERSITAS LAMPUNG</option>
+        <option value="28">UNIVERSITAS ISLAM NEGERI RADEN FATAH</option>
+        <option value="29">UNIVERSITAS ISLAM NEGERI AR-RANIRY</option>
+        <option value="30">UNIVERSITAS NEGERI JAKARTA</option>
+        <option value="31">UNIVERSITAS INDONESIA</option>
+        <option value="32">UNIVERSITAS ISLAM NEGERI JAKARTA</option>
+        <option value="33">INSTITUT PERTANIAN BOGOR</option>
+        <option value="34">UNIVERSITAS PENDIDIKAN INDONESIA</option>
+        <option value="35">INSTITUT TEKNOLOGI BANDUNG</option>
+        <option value="36">UNIVERSITAS PADJADJARAN</option>
+        <option value="37">UNIVERSITAS ISLAM NEGERI SUNAN GUNUNG DJATI</option>
+        <option value="38">UNIVERSITAS SULTAN AGENG TIRTAYASA</option>
+        <option value="39">UPN "VETERAN" JAKARTA</option>
+        <option value="40">UNIVERSITAS SILIWANGI</option>
+        <option value="41">UNIVERSITAS JENDERAL SOEDIRMAN</option>
+        <option value="42">UNIVERSITAS NEGERI SEMARANG</option>
+        <option value="43">UNIVERSITAS DIPONEGORO</option>
+        <option value="44">UNIVERSITAS SEBELAS MARET</option>
+        <option value="45">UNIVERSITAS ISLAM NEGERI WALISONGO</option>
+        <option value="46">UNIVERSITAS NEGERI YOGYAKARTA</option>
+        <option value="47">UNIVERSITAS GADJAH MADA</option>
+        <option value="48">UNIVERSITAS ISLAM NEGERI SUNAN KALIJAGA</option>
+        <option value="49">UPN "VETERAN" YOGYAKARTA</option>
+        <option value="50">UNIVERSITAS NEGERI SURABAYA</option>
+        <option value="51">INSTITUT TEKNOLOGI SEPULUH NOPEMBER</option>
+        <option value="52">UNIVERSITAS AIRLANGGA</option>
+        <option value="53">UNIVERSITAS TRUNOJOYO MADURA</option>
+        <option value="54">UNIVERSITAS ISLAM NEGERI SUNAN AMPEL SURABAYA</option>
+        <option value="55">UNIVERSITAS NEGERI MALANG</option>
+        <option value="56">UNIVERSITAS BRAWIJAYA</option>
+        <option value="57">UNIVERSITAS ISLAM NEGERI MALANG</option>
+        <option value="58">UNIVERSITAS JEMBER</option>
+        <option value="59">UPN "VETERAN" JAWA TIMUR</option>
+        <option value="60">ISI PADANG PANJANG</option>
+        <option value="61">ISBI BANDUNG</option>
+        <option value="62">ISI YOGYAKARTA</option>
+        <option value="63">UNIVERSITAS UDAYANA</option>
+        <option value="64">UNIVERSITAS PENDIDIKAN GANESHA</option>
+        <option value="65">UNIVERSITAS MATARAM</option>
+        <option value="66">UNIVERSITAS NUSA CENDANA</option>
+        <option value="67">UNIVERSITAS TIMOR</option>
+        <option value="68">ISI SURAKARTA</option>
+        <option value="69">ISI DENPASAR</option>
+        <option value="71">UNIVERSITAS TANJUNGPURA</option>
+        <option value="73">UNIVERSITAS PALANGKARAYA</option>
+        <option value="75">UNIVERSITAS LAMBUNG MANGKURAT</option>
+        <option value="77">UNIVERSITAS MULAWARMAN</option>
+        <option value="78">UNIVERSITAS BORNEO TARAKAN</option>
+        <option value="79">INSTITUT TEKNOLOGI KALIMANTAN</option>
+        <option value="80">UNIVERSITAS NEGERI MAKASSAR</option>
+        <option value="81">UNIVERSITAS ISLAM NEGERI ALAUDDIN</option>
+        <option value="82">UNIVERSITAS HASANUDDIN</option>
+        <option value="83">UNIVERSITAS TADULAKO</option>
+        <option value="84">UNIVERSITAS HALUOLEO</option>
+        <option value="85">UNIVERSITAS NEGERI GORONTALO</option>
+        <option value="86">UNIVERSITAS NEGERI MANADO</option>
+        <option value="87">UNIVERSITAS SAM RATULANGI</option>
+        <option value="88">UNIVERSITAS SULAWESI BARAT</option>
+        <option value="89">UNIVERSITAS SEMBILAN BELAS NOVEMBER KOLAKA</option>
+        <option value="90">UNIVERSITAS SINGAPERBANGSA KARAWANG</option>
+        <option value="91">UNIVERSITAS TIDAR</option>
+        <option value="92">UNIVERSITAS ISLAM NEGERI SUMATERA UTARA</option>
+        <option value="93">UNIVERSITAS PATTIMURA</option>
+        <option value="94">UNIVERSITAS CENDERAWASIH</option>
+        <option value="95">UNIVERSITAS KHAIRUN</option>
+        <option value="96">UNIVERSITAS PAPUA</option>
+        <option value="97">ISBI TANAH PAPUA</option>
+        <option value="98">UNIVERSITAS MUSAMUS MERAUKE</option>
       </select>
     </div>
     <div id="top-prodi-chart">
