--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
         <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript" src="js/d3/d3.js"></script>
         <script type="text/javascript" src="js/d3/d3.min.js"></script>
-        <script type="text/javascript" src="js/nd.d3.js"></script>
+        <script type="text/javascript" src="js/nv.d3.js"></script>
     </body>
 </html>
