Connect logo URL

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div id="idnMap"></div>
                     </div>
                     
-                    <div class="tile is-child">
+                    <div class="tile is-child" style="padding: 0;">
                         <div class="field has-addons">
                             <div class="control is-expanded">
                                 <input id="searchUniv" class="input" type="text" placeholder="Cari Universitas">
