--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         src="https://code.jquery.com/jquery-1.12.4.min.js"
         integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
         crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https:/cdn.rawgit.com/darsain/sly/master/dist/sly.js"></script>
+        <script type="text/javascript" src="https://cdn.rawgit.com/darsain/sly/master/dist/sly.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.js"></script>
         <!-- Script -->
         <script type="text/javascript" src="js/script.js"></script>
