--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>SBMPTN 2017</title>
         <!-- Bulma CSS -->
         <link rel="stylesheet"  type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+        <!-- Select2 CSS -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
         <!-- CSS Stylesheet -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/nv.d3.css">
@@ -57,6 +59,7 @@
         <!-- D3.js Source -->
         <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
         <script src="https://d3js.org/topojson.v3.min.js"></script>
         <script
         src="https://code.jquery.com/jquery-1.12.4.min.js"
