change selectbox in prodi into select2

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             </div>
                             <p class="control">
                                 <span class="select">
-                                    <select id="prodSelect">
+                                    <select class="js-example-basic-single js-states form-control" id="prodSelect">
                                         <option>Semua Prodi</option>
                                     </select>
                                 </span>
