change icon size again, and fix title tag

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="tile is-child" id="picto">
                         <div class="univ"></div>
                         <div class="prodi"></div>
-                        <div class="picto-content">
+                        <div id="picto-content">
                             <div id="expected">
                                 <label>Diterima</label>
                                 <div id="expected-content">
