--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.js"></script>
         <!-- Script -->
         <script type="text/javascript" src="js/script.js"></script>
-        <script type="text/javascript" src="js/d3/d3.js"></script>
-        <script type="text/javascript" src="js/d3/d3.min.js"></script>
+        <!-- <script type="text/javascript" src="js/d3/d3.js"></script>
+        <script type="text/javascript" src="js/d3/d3.min.js"></script> -->
         <script type="text/javascript" src="js/d3v3.5.17/d3.v3.min.js"></script>
         <script type="text/javascript" src="js/nv.d3.js"></script>
         <script type="text/javascript" src="js/picto.js"></script>
