--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                     <div class="box">
                         <div class="tabs">
                             <ul>
-                                <li class="main-tab-link is-active"><a onClick="openMainTab(event, 'top-prodi')">Statistik Prodi</a></li>
-                                <li class="main-tab-link"><a onClick="openMainTab(event, 'statistik-kelompok-pilihan-ujian')">Statistik Kelompok</a></li>
-                                <li class="main-tab-link"><a onClick="openMainTab(event, 'statistik-nilai-rataan-diterima-tertinggi')">Top Ten</a></li>
+                                <li class="main-tab-link is-active" onClick="openMainTab(event, 'top-prodi')"><a>Statistik Prodi</a></li>
+                                <li class="main-tab-link" onClick="openMainTab(event, 'statistik-kelompok-pilihan-ujian')"><a>Statistik Kelompok</a></li>
+                                <li class="main-tab-link" onClick="openMainTab(event, 'statistik-nilai-rataan-diterima-tertinggi')"><a>Top Ten</a></li>
                             </ul>
                         </div>
                         <div class="tile is-child main-tab-content" id="top-prodi">
