--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="tile is-parent is-4 is-vertical">
                     <div class="tile is-child box" id="picto">
-                        <div class="univ is-size-3"></div>
+                        <div class="univ is-size-3 has-text-weight-bold"></div>
                         <div class="prodi is-size-4"></div>
                         <div id="picto-content">
                             <div id="expected">
