--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
                                 </span>
                             </div>
                         </div>
-                    </div>
-                    <div class="tile is-child box" style="padding: 0;">
-                        <div class="frame">
-                            <ul class="slidee">
-                            </ul>
+                        <div class="box">
+                            <div class="frame">
+                                <ul class="slidee">
+                                </ul>
+                            </div>
+                            <div class="scrollbar">
+                                <div class="handle"></div>
+                            </div>
                         </div>
-                        <div class="scrollbar">
-                            <div class="handle"></div>
-                        </div>
+                        
                     </div>
                 </div>
                 <div class="tile is-parent is-4 is-vertical">
