Change legend to continous one

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
         
         
-        <div class="container is-fluid">
+        <div class="container is-fluid" style="margin-top: 1em;">
             <div class="tile is-ancestor">
                 <div class="tile is-parent is-8 is-vertical">
                     <div class="tile is-child">
