More relevant subtitle

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="hero-head">
                 <div class="container">
                     <h1 class="title has-text-centered is-size-2">SBMPTN 2017</h1>
-                    <h2 class="subtitle has-text-centered">Population Map</h2>
+                    <h2 class="subtitle has-text-centered">Statistik Penerimaan Mahasiswa</h2>
                 </div>
             </div>
         </section>
