--- a/index.html
+++ b/index.html
@@ -158,42 +158,38 @@
                                     <button class="tablinks" onclick="openList(event, 'statistik-nilai-rataan-diterima-tertinggi-soshum')">Soshum</button>
                                 </div>
                                 <!-- Tab content -->
-                                <div style="height:400px;">
+                                <div">
                                     <div id="statistik-nilai-rataan-diterima-tertinggi-saintek" class="tabcontent">
-                                        <div class="is-one-fifth">
-                                        </div>
-                                        <ol class="is-three-fifths" id="statistik-nilai-rataan-diterima-tertinggi-saintek-list" type="1">
-                                            <li>Institut Teknologi Bandung</li>
-                                            <li>Universitas Indonesia</li>
-                                            <li>Universitas Gajah Mada</li>
-                                            <li>Institut Teknologi Sepuluh Nopember</li>
-                                            <li>Universitas Airlangga</li>
-                                            <li>Universitas Padjadjaran</li>
-                                            <li>Universitas Diponegoro</li>
-                                            <li>Institut Pertanian Bogor</li>
-                                            <li>Universitas Sebelas Maret</li>
-                                            <li>UPN "Veteran" Yogyakarta</li>
-                                        </ol>
-                                        <div class="is-one-fifth">
-                                        </div>
+                                        <table class="table">
+                                            <tbody>
+                                            <tr class="is-size-5"><td>#1</td><td>Institut Teknologi Bandung<td></tr>
+                                            <tr class="is-size-6"><td>#2</td><td>Universitas Indonesia<td></tr>
+                                            <tr class="is-size-7"><td>#3</td><td>Universitas Gajah Mada<td></tr>
+                                            <tr class="is-size-7"><td>#4</td><td>Institut Teknologi Sepuluh Nopember<td></tr>
+                                            <tr class="is-size-7"><td>#5</td><td>Universitas Airlangga<td></tr>
+                                            <tr class="is-size-7"><td>#6</td><td>Universitas Padjadjaran<td></tr>
+                                            <tr class="is-size-7"><td>#7</td><td>Universitas Diponegoro<td></tr>
+                                            <tr class="is-size-7"><td>#8</td><td>Institut Pertanian Bogor<td></tr>
+                                            <tr class="is-size-7"><td>#9</td><td>Universitas Sebelas Maret<td></tr>
+                                            <tr class="is-size-7"><td>#10</td><td>UPN "Veteran" Yogyakarta<td></tr>
+                                            </tbody>
+                                        </table>
                                     </div>
                                     <div id="statistik-nilai-rataan-diterima-tertinggi-soshum" class="tabcontent">
-                                        <div class="is-one-fifth">
-                                        </div>
-                                        <ol class="is-three-fifths" id="statistik-nilai-rataan-diterima-tertinggi-soshum-list" type="1">
-                                            <li>Universitas Indonesia</li>
-                                            <li>Universitas Gajah Mada</li>
-                                            <li>Institut Teknologi Bandung</li>
-                                            <li>Universitas Padjadjaran</li>
-                                            <li>Universitas Airlangga</li>
-                                            <li>Universitas Diponegoro</li>
-                                            <li>Universitas Brawijaya</li>
-                                            <li>UPN "Veteran" Yogyakarta</li>
-                                            <li>Universitas Sebelas Maret</li>
-                                            <li>Universitas Jenderal Soedirman</li>
-                                        </ol>
-                                        <div class="is-one-fifth">
-                                        </div>
+                                        <table class="table">
+                                            <tbody>
+                                            <tr class="is-size-5"><td>#1</td><td>Universitas Indonesia<td></tr>
+                                            <tr class="is-size-6"><td>#2</td><td>Universitas Gajah Mada<td></tr>
+                                            <tr class="is-size-7"><td>#3</td><td>Institut Teknologi Bandung<td></tr>
+                                            <tr class="is-size-7"><td>#4</td><td>Universitas Padjadjaran<td></tr>
+                                            <tr class="is-size-7"><td>#5</td><td>Universitas Airlangga<td></tr>
+                                            <tr class="is-size-7"><td>#6</td><td>Universitas Diponegoro<td></tr>
+                                            <tr class="is-size-7"><td>#7</td><td>Universitas Brawijaya<td></tr>
+                                            <tr class="is-size-7"><td>#8</td><td>UPN "Veteran" Yogyakarta<td></tr>
+                                            <tr class="is-size-7"><td>#9</td><td>Universitas Sebelas Maret<td></tr>
+                                            <tr class="is-size-7"><td>#10</td><td>Universitas Jenderal Soedirman<td></tr>
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
                             </div>
