--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                                 <div class="tile is-child box">
-                                    <div class="tabs">
+                                    <div class="tabs is-small">
                                         <ul>
                                             <li class="main-tab-link is-active" onClick="openMainTab(event, 'top-prodi')"><a>Statistik Prodi</a></li>
                                             <li class="main-tab-link" onClick="openMainTab(event, 'statistik-kelompok-pilihan-ujian')"><a>Statistik Pengelompokan Pendaftar</a></li>
