--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="tile is-ancestor">
                             <div class="tile is-parent is-vertical is-12">
                                 <div class="tile is-child box" id="picto">
-                                    <div class="univ is-size-3 has-text-weight-bold"></div>
+                                    <div class="univ is-size-3"></div>
                                     <div class="prodi is-size-4"></div>
                                     <div id="picto-content">
                                         <div id="expected">
