--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                             </span>
                                         </div>
                                         <div id="top-prodi-chart">
-                                        <svg height="250"></svg>
+                                        <svg id="top-prodi-chart-svg"></svg>
                                     </div>
                                 </div>
                                 <div class="tile is-child main-tab-content" id="statistik-kelompok-pilihan-ujian">
