--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                                 </select>
                                             </span>
                                             <span style="display: inline-block;">
-                                                <p>program studi</p>
+                                                <p class="is-size-6 ">program studi</p>
                                             </span>
                                             
                                             <select class="borderless-medium" id="top-prodi-select">
@@ -119,7 +119,7 @@
                                                 <option value="0">Terbawah</option>
                                             </select>
                                             <span style="display: inline-block;">
-                                                <p>berdasarkan</p>
+                                                <p class="is-size-6 ">berdasarkan</p>
                                             </span>
                                             <select class="borderless-small" id="top-prodi-base">
                                                 <option value="1">Jumlah Peserta yang Diterima</option>
@@ -127,7 +127,7 @@
                                                 <option value="3">Keketatan</option>
                                             </select>
                                             <span style="display: inline-block;">
-                                                <p>dari
+                                                <p class="is-size-6 ">dari
                                                     <span id="statsUniv" class="is-size-6 is-italic">Semua Universitas</span>
                                                 </p>
                                             </span>
