--- a/index.html
+++ b/index.html
@@ -138,11 +138,16 @@
                                 </div>
                                 <div class="tile is-child main-tab-content" id="statistik-kelompok-pilihan-ujian">
                                     <div id="statistik-kelompok-pilihan-ujian-filter">
-                                        Tampilkan chart berdasarkan kelompok:
-                                        <select class="borderless-medium" id="statistik-kelompok-pilihan-ujian-select">
-                                            <option value="1">Pilihan</option>
-                                            <option value="2">Ujian</option>
-                                        </select>
+                                        <span style="display: inline-block;"">
+                                            <p class="is-size-6">Tampilkan chart berdasarkan kelompok:</p>
+                                        </span>
+                                        <span style="display: inline-block;">
+                                            <select class="borderless-medium" id="statistik-kelompok-pilihan-ujian-select">
+                                                <option value="1">Pilihan</option>
+                                                <option value="2">Ujian</option>
+                                            </select>
+                                        </span>
+                                        
                                     </div>
                                     <div id="statistik-kelompok-pilihan-ujian-chart">
                                     <svg style="height:300px;"></svg>
@@ -162,32 +167,32 @@
                                     <div id="statistik-nilai-rataan-diterima-tertinggi-saintek" class="tabcontent">
                                         <table class="table">
                                             <tbody>
-                                            <tr class="is-size-5"><td>#1</td><td>Institut Teknologi Bandung<td></tr>
-                                            <tr class="is-size-6"><td>#2</td><td>Universitas Indonesia<td></tr>
-                                            <tr class="is-size-7"><td>#3</td><td>Universitas Gajah Mada<td></tr>
-                                            <tr class="is-size-7"><td>#4</td><td>Institut Teknologi Sepuluh Nopember<td></tr>
-                                            <tr class="is-size-7"><td>#5</td><td>Universitas Airlangga<td></tr>
-                                            <tr class="is-size-7"><td>#6</td><td>Universitas Padjadjaran<td></tr>
-                                            <tr class="is-size-7"><td>#7</td><td>Universitas Diponegoro<td></tr>
-                                            <tr class="is-size-7"><td>#8</td><td>Institut Pertanian Bogor<td></tr>
-                                            <tr class="is-size-7"><td>#9</td><td>Universitas Sebelas Maret<td></tr>
-                                            <tr class="is-size-7"><td>#10</td><td>UPN "Veteran" Yogyakarta<td></tr>
+                                                <tr class="is-size-5"><td>#1</td><td>Institut Teknologi Bandung<td></tr>
+                                                <tr class="is-size-6"><td>#2</td><td>Universitas Indonesia<td></tr>
+                                                <tr class="is-size-7"><td>#3</td><td>Universitas Gajah Mada<td></tr>
+                                                <tr class="is-size-7"><td>#4</td><td>Institut Teknologi Sepuluh Nopember<td></tr>
+                                                <tr class="is-size-7"><td>#5</td><td>Universitas Airlangga<td></tr>
+                                                <tr class="is-size-7"><td>#6</td><td>Universitas Padjadjaran<td></tr>
+                                                <tr class="is-size-7"><td>#7</td><td>Universitas Diponegoro<td></tr>
+                                                <tr class="is-size-7"><td>#8</td><td>Institut Pertanian Bogor<td></tr>
+                                                <tr class="is-size-7"><td>#9</td><td>Universitas Sebelas Maret<td></tr>
+                                                <tr class="is-size-7"><td>#10</td><td>UPN "Veteran" Yogyakarta<td></tr>
                                             </tbody>
                                         </table>
                                     </div>
                                     <div id="statistik-nilai-rataan-diterima-tertinggi-soshum" class="tabcontent">
                                         <table class="table">
                                             <tbody>
-                                            <tr class="is-size-5"><td>#1</td><td>Universitas Indonesia<td></tr>
-                                            <tr class="is-size-6"><td>#2</td><td>Universitas Gajah Mada<td></tr>
-                                            <tr class="is-size-7"><td>#3</td><td>Institut Teknologi Bandung<td></tr>
-                                            <tr class="is-size-7"><td>#4</td><td>Universitas Padjadjaran<td></tr>
-                                            <tr class="is-size-7"><td>#5</td><td>Universitas Airlangga<td></tr>
-                                            <tr class="is-size-7"><td>#6</td><td>Universitas Diponegoro<td></tr>
-                                            <tr class="is-size-7"><td>#7</td><td>Universitas Brawijaya<td></tr>
-                                            <tr class="is-size-7"><td>#8</td><td>UPN "Veteran" Yogyakarta<td></tr>
-                                            <tr class="is-size-7"><td>#9</td><td>Universitas Sebelas Maret<td></tr>
-                                            <tr class="is-size-7"><td>#10</td><td>Universitas Jenderal Soedirman<td></tr>
+                                                <tr class="is-size-5"><td>#1</td><td>Universitas Indonesia<td></tr>
+                                                <tr class="is-size-6"><td>#2</td><td>Universitas Gajah Mada<td></tr>
+                                                <tr class="is-size-7"><td>#3</td><td>Institut Teknologi Bandung<td></tr>
+                                                <tr class="is-size-7"><td>#4</td><td>Universitas Padjadjaran<td></tr>
+                                                <tr class="is-size-7"><td>#5</td><td>Universitas Airlangga<td></tr>
+                                                <tr class="is-size-7"><td>#6</td><td>Universitas Diponegoro<td></tr>
+                                                <tr class="is-size-7"><td>#7</td><td>Universitas Brawijaya<td></tr>
+                                                <tr class="is-size-7"><td>#8</td><td>UPN "Veteran" Yogyakarta<td></tr>
+                                                <tr class="is-size-7"><td>#9</td><td>Universitas Sebelas Maret<td></tr>
+                                                <tr class="is-size-7"><td>#10</td><td>Universitas Jenderal Soedirman<td></tr>
                                             </tbody>
                                         </table>
                                     </div>
